updated index file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Simple and Elegant</h3>
-						<h1>BURNTECH</h1>
+						<h1>JOSIAH</h1>
 						<h2 class="rotate">FRONT-END DEVELOPER &AMP; BACK-END DEVELOPER, FULL STACK DEVELOPER, SOFTWARE ENGINEER,PROJECT LEADER</h2>
 						<p>BURNTECH is the firm to work with if you want to keep up to high standards. The professional workflows they stick to, result in exceptional quality.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
